plugin 1st draf

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,5 +3,6 @@ version: 0.5.0
 author: Tom Yeh <tomyeh@rikulo.org>
 description: Dart STOMP client for easy messaging interoperability.
 homepage: https://github.com/rikulo/stomp
+documentation: http://api.rikulo.org/stomp/latest
 dependencies:
   meta: any
