--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,8 @@
 name: stomp
-version: 0.5.2+1
+version: 0.5.3
 author: Tom Yeh <tomyeh@rikulo.org>
 description: Dart STOMP client for easy messaging interoperability.
 homepage: https://github.com/rikulo/stomp
 documentation: http://api.rikulo.org/stomp/latest
 dependencies:
-  meta: any
   unittest: any
